# oct_segmentation

./: .gitattributes  .gitignore  .pre-commit-config.yaml  MIGRATION_GUIDE.md  README.md  convert_video_codec.sh  create_env.sh  dvc.yaml  environment.yaml  make_env.sh  make_env_uv.sh  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yaml
app/demo/mask/: 001_1_004.tiff  001_1_009.tiff  001_1_010.tiff  001_1_015.tiff  001_1_019.tiff  001_1_026.tiff  001_1_028.tiff  001_1_030.tiff  001_1_031.tiff  001_1_047.tiff  001_1_048.tiff  001_1_052.tiff  001_1_064.tiff  001_1_072.tiff  001_1_073.tiff  (+37 more)
config/: convert_dicoms.yaml  convert_int_to_smp.yaml  convert_int_to_smt.yaml  data.yaml  data_sly.yaml  main.yaml  stack_images.yaml  training_models_smp.yaml  training_models_smt.yaml
configs/: convert_dicoms.yaml  convert_int_to_cv.yaml  convert_int_to_final.yaml  convert_sly_to_int.yaml  draw_boxplots.yaml  draw_loss_plot.yaml  extract_metadata.yaml  get_configs.yaml  get_model_info.yaml  get_study_metadata.yaml  main.yaml  predict.yaml  stack_images.yaml  train.yaml  train_smp.yaml  train_smp_model.yaml  training_models_smp.yaml  tune.yaml  visualize_activation_maps.yaml
data/: dcm.dvc  dcm_dev.dvc  raw.dvc  raw_dev.dvc  sly_output.dvc
data/cv/: fold_1.zip.dvc  fold_2.zip.dvc  fold_3.zip.dvc  fold_4.zip.dvc  fold_5.zip.dvc
data/interim/: img.zip.dvc
dvc/data/: raw.dvc  raw_demo.dvc
eval/: model_results.csv
eval/training/: best_metrics.csv
eval/tuning/: configs_all.xlsx  configs_best.xlsx  fibrous_cap.xlsx  lipid_core.xlsx  lumen.xlsx  vasa_vasorum.xlsx
models/: FC_LC.dvc  LM.dvc  VV.dvc
requirements/: dev.txt
src/: __init__.py  predict.py
src/app/: app.py
src/data/: __init__.py  convert_dicoms.py  convert_int_to_cv.py  convert_int_to_final.py  convert_int_to_smp.py  convert_int_to_smt.py  convert_sly.py  convert_sly_to_int.py  extract_metadata.py  get_metadata.py  get_study_metadata.py  mask_processor.py  raw_to_sly.sh  reformate_data.py  stack_images.py  utils.py
src/models/: cam_processor.py  get_configs.py  get_hyperparam_tables.py  get_model_info.py  visualize_activation_maps.py  visualize_activation_maps.sh  visualize_activation_maps_new.py
src/smp/: dataset.py  model.py  train.py  training_models.py
src/smt/: training_models.py
src/vis/: app.py  draw_boxplots.py  draw_loss_plot.py
tools/: convert_dicoms.py  get_metadata.py  stack_images.py  utils.py
(+202 files in other folders)
