[project]
name = 'oct_segmentation'
version = '0.0.1'
description = 'Segmentation and quantification of atherosclerotic plaques in OCT images'
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>=3.11,<3.12'
dependencies = [
    'albumentations==1.4.3',
    'dvc==3.49.0',
    'dvc-gdrive==3.0.1',
    'ffmpeg-python==0.2.0',
    'grad-cam==1.5.0',
    'gradio>=4.0.0,<5.0.0',
    'hydra-core==1.3.2',
    'imagecodecs>=2023.1.0',
    'imutils==0.5.4',
    'joblib==1.3.2',
    'matplotlib==3.8.4',
    'numpy==1.26.4',
    'omegaconf==2.3.0',
    'opencv-python==4.8.1.78',
    'openpyxl==3.1.2',
    'pandas==2.1.4',
    'Pillow==10.2.0',
    'plotly==6.0.1',
    'pre-commit==3.7.0',
    'ptflops==0.7.2.2',
    'pytorch_lightning==2.2.1',
    'seaborn==0.13.2',
    'segmentation_models_pytorch==0.3.3',
    'scikit-learn==1.4.1.post1',
    'supervisely==6.73.62',
    'tensorboard==2.16.2',
    'tensorboardx==2.6.2.2',
    'tifffile==2024.4.18',
    'tomli==2.0.1',
    'torch==2.2.2',
    'tqdm==4.66.2',
    'wandb==0.16.6',
]

[project.optional-dependencies]
dev = [
    'pre-commit==3.7.0',
]

[tool.setuptools.packages]
find = {}   # Scan the project directory with the default parameters

[tool.black]
line_length = 100
skip_string_normalization = true
verbose = true

[tool.pycln]
all = true

[tool.isort]
line_length = 100
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
ignore=['E501']
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default
select = ['E', 'F']
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = '^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$'
# Exclude a variety of commonly ignored directories
exclude = [
    '.bzr',
    '.direnv',
    '.eggs',
    '.git',
    '.git-rewrite',
    '.hg',
    '.mypy_cache',
    '.nox',
    '.pants.d',
    '.pytype',
    '.ruff_cache',
    '.svn',
    '.tox',
    '.venv',
    '__pypackages__',
    '_build',
    'buck-out',
    'build',
    'dist',
    'node_modules',
    'venv',
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.pydocstyle]
convention = 'google'
add_ignore = 'D100, D102, D103, D104, D105, D106, D107'

[tool.mypy]
install_types = true
no_strict_optional = true
ignore_missing_imports = true
